# document-processing-service

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  groups.json  pyproject.toml
.gihub/workflows/: ci.yml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
documents/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
documents/migrations/: 0001_initial.py  0002_initial.py  0003_approvalqueue_is_stop_alter_document_reviewed_at.py  0004_alter_queueitem_unique_together_and_more.py  0005_alter_folder_unique_together_alter_document_status.py  0006_remove_document_reviewed_by_document_file_answer_and_more.py  0007_remove_document_file_answer_and_more.py  0008_remove_document_review_comment_and_more.py  0009_remove_queueitem_file_answer_and_more.py  0010_alter_document_reviewed_at_alter_queueitem_added_at_and_more.py  0011_document_reviewed_by.py  0012_documentfile.py  0013_documentfile_owner_alter_document_owner_and_more.py  0014_remove_document_temp_file_alter_document_file.py  0015_remove_document_file.py  0016_alter_document_file_answer_alter_document_title_and_more.py  0017_alter_queueitem_options.py  0018_alter_document_file_answer_alter_documentfile_file_and_more.py  0019_alter_document_file_answer_alter_documentfile_file_and_more.py  0020_alter_document_options.py  0021_alter_approvalqueue_title.py
documents/utils/: file_display.py
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: default.conf
static/admin/css/: custom.css
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
users/management/commands/: create_admin.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_name_and_more.py
