[project]
name = "document-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Olga",email = "nefertituolga@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "django-stubs (>=5.2.2,<6.0.0)",
    "djangorestframework-stubs (>=3.16.2,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.10.5,<8.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "forex-python (>=1.9.2,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "parameterized (>=0.9.0,<0.10.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-health-check (>=3.20.0,<4.0.0)",
    "boto3 (>=1.40.21,<2.0.0)",
    "django (>=5.2.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
exclude = ["venv", "tests", "phonenumber_field", ".*migrations/.*", ]
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    )/
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip_gitignore = true

[tool.flake8]
max-line-length = 119
ignore = "E503, E121, E122, E501"
exclude =  [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "*.min.js",
    "*.min.css",
    "build",
    "dist",
    "migrations"
]

[tool.django-stubs]
django_settings_module = "config.settings"
strict_settings = true

